--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
-    background-image: url(../img/bkg.jpg);
+    background-image: url(../img/bckg.jpg);
 }
 
 
@@ -44,7 +44,7 @@ body {
 }
 
 #imagenes img:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     transition: transform .5s ease;
 }
 
