--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ body {
 }
 
 #img-activa {
-    width: 100%;
+    max-width: 100%;
     height: auto;
     border-radius: 5px;
 }
@@ -139,4 +139,87 @@ button {
     transform: scale(1.2);
     transition: transform .3s ease;
 }
+
+
+
+
+@media (max-width: 768px) {
+
+    #imagenes {
+        max-width: 90%;
+        min-width: 70%;
+    }
+
+    #img-activa {
+        max-width: 100%;
+
+    }
+
+    #cont-interno {
+        max-width: 70%;
+        min-height: 40%;
+    }
+
+}
+
+@media (max-width: 425px) {
+
+    #imagenes {
+        max-width: 90%;
+        min-width: 70%;
+    }
+
+    #img-activa {
+        max-width: 90%;
+        height: auto;
+    }
+
+    #cont-interno {
+        max-width: 75%;
+        min-height: 30%;
+    }
+
+}
+
+
+@media (max-width: 375px) {
+
+    #imagenes {
+        max-width: 90%;
+        min-width: 70%;
+    }
+
+    #img-activa {
+        max-width: 90%;
+        height: auto;
+    }
+
+    #cont-interno {
+        max-width: 75%;
+        min-height: 20%;
+    }
+
+}
+
+
+
+@media (max-width: 320px) {
+
+    #imagenes {
+        max-width: 90%;
+        min-width: 70%;
+    }
+
+    #img-activa {
+        max-width: 90%;
+        height: auto;
+    }
+
+    #cont-interno {
+        max-width: 75%;
+        min-height: 25%;
+    }
+
+}
+
 
