--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
     line-height: 1.6;
     background-image: url(../img/bckg.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 
@@ -143,6 +144,11 @@ button {
 
 
 @media (max-width: 720px) and (orientation:portrait) {
+
+    body {
+        min-height: 100vh;
+    }
+
     #imagenes {
         max-width: 90%;
         min-width: 80%;
