--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ body {
     background-image: url(../img/bckg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    min-height: 100vh;
 }
 
 
@@ -143,14 +144,10 @@ button {
 }
 
 
-@media (max-width: 720px) and (orientation:portrait) {
-
-    body {
-        min-height: 100vh;
-    }
-
+/*Laptop*/
+@media (max-width: 1024px) {
     #imagenes {
-        max-width: 90%;
+        max-width: 100%;
         min-width: 80%;
     }
 
@@ -161,7 +158,7 @@ button {
 
     #cont-interno {
         max-width: 80%;
-        min-height: 25%;
+        min-height: 30%;
     }
 
 
@@ -177,25 +174,11 @@ button {
 }
 
 
-@media (max-width: 1600px) and (orientation:landscape) {
-    #imagenes {
-        max-width: 80%;
-        min-width: 60%;
-    }
+/* Laptop L */
 
-    #img-activa {
-        max-width: 100%;
-    }
 
-    #cont-interno {
-        max-width: 65%;
-        min-height: 30%;
-    }
 
-    #btn-cerrar {
-        top: -7%;
-        right: -7%;
-    }
+/* 4k */
 
-}
+
 
