--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
     background-image: url(../img/bckg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    /*min-height: 100vh;*/
+    min-height: 100vh;
 }
 
 
@@ -144,9 +144,13 @@ button {
 }
 
 
-/*cel horizontal*/
-
-@media (max-width: 1600px) and (orientation:landscape) {
+/*cel*/
+@media (max-width: 720px) and (orientation:portrait) {
+    #imagenes {
+        max-width: 90%;
+        min-width: 35%;
+    }
+    
     #img-activa {
         max-width: 100%;
 
@@ -159,16 +163,49 @@ button {
 
     #btn-cerrar {
         top: -5%;
-        right: -5%;
+        right: -8%;
     }
 
     #btn-anterior {
-        left: -8%;
+        left: -5%;
     }
 
 
     #btn-siguiente {
+        right: -5%;
+    }
+
+}
+
+
+@media (max-width: 1600px) and (orientation:landscape) {
+    #imagenes {
+        max-width: 90%;
+        min-width: 35%;
+    }
+    
+    #img-activa {
+        max-width: 100%;
+
+    }
+
+    #cont-interno {
+        max-width: 70%;
+        min-height: 25%;
+    }
+
+    #btn-cerrar {
+        top: -3%;
         right: -8%;
+    }
+
+    #btn-anterior {
+        left: -5%;
+    }
+
+
+    #btn-siguiente {
+        right: -5%;
     }
 
 }
